--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ a,
 }
 
 .section {
-  height: 300px;
+  /* height: 300px; */
   margin-left: auto;
   margin-right: auto;
   background-color: beige;
@@ -24,7 +24,7 @@ a,
 }
 
 .container {
-  height: 200px;
+  /* height: 200px; */
   margin-left: auto;
   margin-right: auto;
   outline: auto;
@@ -32,17 +32,28 @@ a,
   border: 15px solid olive;
 }
 
-/* ======================================================= */
+/* ==================================== */
+.image {
+  margin-top: 10px;
+  width: 100%;
+  max-width: 450px;
+}
+
+.hero__title {
+  width: 100%;
+}
+
+/* ====================================== */
 
 .section {
   /* min-width: 480px; */
   max-width: 1600px;
 }
 
-/* ====================================================== */
+/* ======================================= */
 
 .container {
-  width: 480px;
+  max-width: 480px;
 }
 
 @media screen and (min-width: 768px) {
