--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,14 @@ a,
 
 /* ======================================= */
 
-.container {
+/* .container {
   max-width: 480px;
+} */
+
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 480px;
+  }
 }
 
 @media screen and (min-width: 768px) {
