--- a/css/styles.css
+++ b/css/styles.css
@@ -52,15 +52,19 @@ a,
 
 /* ======================================= */
 
+.container {
+  width: 480px;
+}
+
 /* .container {
   max-width: 480px;
 } */
-
+/* 
 @media screen and (max-width: 767px) {
   .container {
     max-width: 480px;
   }
-}
+} */
 
 @media screen and (min-width: 768px) {
   .container {
