--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,16 @@
 
 html {
   font-size: 48px;
-  @media screen and (max-width: 480px) {
-    font-size: ;
+}
+@media screen and (max-width: 479px) {
+  html {
+    font-size: 10vw;
   }
 }
 
 body {
   margin: 0;
-  padding-top: 10px;
+  padding-top: 0.1rem;
 }
 
 p {
@@ -21,11 +23,11 @@ p {
 
 a {
   display: block;
-  font-size: 40px;
+  font-size: 1rem;
 }
 
 .label {
-  font-size: 30px;
+  font-size: 1rem;
 }
 
 .section {
@@ -33,7 +35,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   background-color: beige;
-  border: 2px solid black;
+  border: auto;
 }
 
 .container {
@@ -47,7 +49,7 @@ a {
 
 /* ==================================== */
 .image {
-  margin-top: 10px;
+  margin-top: 0.25rem;
   width: 100%;
   max-width: 450px;
 }
@@ -56,20 +58,17 @@ a {
   width: auto;
   margin-left: auto;
   margin-right: auto;
-  font-size: 30px;
-
+  font-size: 1rem;
   text-align: center;
 }
 
 /* ====================================== */
-
 .section {
   /* min-width: 480px; */
   max-width: 1600px;
 }
 
 /* ======================================= */
-
 .container {
   width: 100vw;
   max-width: 480px;
@@ -80,10 +79,8 @@ a {
     max-width: 768px;
   }
 }
-
 @media (min-width: 1200px) {
   .container {
     max-width: 1200px;
-    /* width: 1200px; */
   }
-}
+}/*# sourceMappingURL=main.css.map */
