--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,16 +3,18 @@
   box-sizing: border-box;
 }
 
+$fontSize: 48px;
+$width: 480px;
 html {
-  font-size: 48px;
-  @media screen and (max-width: 480px) {
-    font-size: ;
+  font-size: $fontSize;
+  @media screen and (max-width: ($width - 1px)) {
+    font-size: calc($fontSize * (100vw / $width));
   }
 }
 
 body {
   margin: 0;
-  padding-top: 10px;
+  padding-top: 0.1rem;
 }
 
 p {
@@ -21,11 +23,11 @@ p {
 
 a {
   display: block;
-  font-size: 40px;
+  font-size: 1rem;
 }
 
 .label {
-  font-size: 30px;
+  font-size: 1rem;
 }
 
 .section {
@@ -33,7 +35,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   background-color: beige;
-  border: 2px solid black;
+  border: auto;
 }
 
 .container {
@@ -47,7 +49,7 @@ a {
 
 /* ==================================== */
 .image {
-  margin-top: 10px;
+  margin-top: 0.25rem;
   width: 100%;
   max-width: 450px;
 }
@@ -56,7 +58,7 @@ a {
   width: auto;
   margin-left: auto;
   margin-right: auto;
-  font-size: 30px;
+  font-size: 1rem;
 
   text-align: center;
 }
@@ -84,6 +86,5 @@ a {
 @media (min-width: 1200px) {
   .container {
     max-width: 1200px;
-    /* width: 1200px; */
   }
 }
